--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,13 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+//	maven {
+//		url "https://s3.us-west-2.amazonaws.com/dynamodb-local/release"
+//	}
 }
 
 dependencies {
+//	implementation 'com.amazonaws:DynamoDBLocal:1.12.0'
 	implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.11.64'
 	implementation 'com.github.derjust:spring-data-dynamodb:5.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
